memo/memo-with-references/tests/fail-multiple-attribute-args.stderr
error: unexpected token
 --> tests/fail-multiple-attribute-args.rs:3:10
  |
3 | #[memo('a, 'b)]
  |          ^
